<resources>
    <string name="app_name">DressMe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DressMe!</string>
    <string name="nav_header_subtitle">Guarda tu ropa y crea conjuntos aleatorios</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_armario">Armario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subir_imagen">Subir imagen</string>
    <string name="foto_ropa">Foto ropa</string>
    <string name="ropa_edit_nombre">Nombre*</string>
    <string name="ropa_categoria">Categoría*</string>
    <string name="ropa_colores">Colores*</string>
    <string name="ropa_tiempo">Tiempo</string>
    <string name="ropa_marca">Marca</string>
    <string name="talla">Talla</string>
    <string name="subir_prenda">Subir prenda</string>
    <string name="menu_subirRopa">Subir prenda</string>
    <string name="prenda_talla">Talla</string>
    <string name="ropa_view_colores">Colores:</string>
    <string name="ropa_view_tiempo">Tiempo:</string>
    <string name="ropa_fecha_compra">Comprado el:</string>
    <string name="ropa_view_fecha_creacion">Creado el:</string>
    <string name="menu_verPrenda">Ver prenda</string>

    <string name="edit_prenda">Actualizar </string>
    <string name="menu_misConjuntos">Mis conjuntos</string>
    <string name="subir_conjunto">Subir conjunto</string>
    <string name="menu_subirConjunto">Subir conjunto</string>
    <string name="label_search">Buscar</string>
    <string name="search_hint">Buscar…</string>
    <string name="buscar_accesorio">Buscar accesorio…</string>
    <string name="buscar_superior">Buscar prenda superior…</string>
    <string name="buscar_prenda_inferior">Buscar prenda inferior…</string>
    <string name="buscar_zapatos">Buscar zapatos…</string>
    <string name="menu_verConjunto">Ver conjunto</string>
    <string name="welcome_message">¡Bienvenid@ a DressMe!
        Comienza a crear tus conjuntos.</string>
    <string name="title_filter_conjunto">Generación de un conjunto aleatorio</string>
    <string name="confirmar_colores">Confirmar colores</string>
    <string name="confirmar_categorias">Confirmar categorías</string>
    <string name="confirmar_tiempo">Confirmar tiempo</string>
    <string name="title_random">El conjunto nuevo es…</string>
    <string name="txt_inicio_generar_conjunto">Generar conjunto aleatorio</string>
    <string name="txt_inicio_generar">Generar</string>
    <string name="ropa_subCategoria">Subcategoría</string>
    <string name="favorite">Favoritos</string>
    <string name="content_description_favorite">Prendas favoritas</string>
    <string name="fecha_compra">Fecha de compra</string>
    <string name="error_nombre">El nombre es obligatorio</string>
    <string name="error_category">Seleccione una categoría</string>
    <string name="error_color">Seleccione un color</string>
    <string name="error_prendas">Debe seleccionar al menos un tipo de prenda</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="modo_claro">Modo claro</string>
    <string name="app_info">Información</string>
    <string name="app_info_description">
        DressMe! permite el almacenamiento de la ropa y los conjuntos del usuario de forma virtual y personalizándolo con las características
        e información que se quiera, incluso la creación de conjuntos aleatorios. \n
        \n Proyecto de fin de máster para INESEM Business School.
    </string>
    <string name="app_version">1.0.0</string>
    <string name="menu_info">Información</string>
    <string name="github_url">Github url</string>
    <string name="menu_generarConjunto">Conjunto aleatorio</string>
    <string name="menu_filtrarConjunto">Filtrar conjunto</string>
    <string name="menu_checkbox">Seleccione opciones...</string>
    <string name="edit">Modificar</string>
    <string name="delete">Eliminar</string>
    <string name="iv_c_conjunto">Imagen conjunto</string>
    <string name="txt_no_prenda">No se encontraron prendas con los filtros indicados</string>
    <string name="txt_prendas">Prendas:</string>
    <string name="primera_prenda">¡Añade tu primera prenda!</string>
    <string name="btn_primera_prenda">Añadir primera prenda</string>
    <string name="txt_empty_conjuntos">Parece que aún no tienes conjuntos... \n ¡Prueba a crear uno nuevo pulsando en el botón inferior!</string>
    <string name="txt_empty_prendas">Parece que no has añadido prendas en esta categoría. \n ¡Empieza pulsando en el botón inferior!</string>
    <string name="prendas_recientes">Prendas más recientes:</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>

    <string name="onboarding_welcome">
        ¡Gracias por descargar DressMe! \n
        Podrás almacenar tu ropa y crear conjuntos.

        Desliza hacia la izquierda para comenzar el tutorial,
        o pulsa en omitir para empezar a usar la aplicación.

    </string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="onboarding_armario_1">En tu armario, tendrás la ropa dividida en cuatro categorías:</string>
    <string name="onbarding_accesorio">Accesorio</string>
    <string name="onbarding_superior">Superior</string>
    <string name="onbarding_inferior">Inferior</string>
    <string name="onbarding_calzado">Calzado</string>
    <string name="onboarding_armario_2">Podrás añadir información de las mismas, así como asignarles un color y el tiempo en el que te gusta vestirla.</string>
    <string name="onboarding_armario_3">¡Pulsa en el botón con este símbolo en el armario para subir tus prendas!</string>
    <string name="onboarding_conjuntos_1">¡Crea tus propios conjuntos de ropa para tenerlos a mano!</string>
    <string name="onboarding_conjuntos_2">¡Podrás ver fácilmente cuales son las prendas que lo componen!</string>
    <string name="onboarding_conjuntos_3">Al igual que con las prendas, pulsa este botón en la lista de mis conjuntos para agregar uno nuevo.</string>
    <string name="onboarding_generar_1">Y lo mejor de todo... ¡Podrás generar tu propio conjunto de forma aleatoria con las prendas que tengas subidas!</string>
    <string name="onboarding_generar_2">Así que si un día no sabes que ponerte y probar una combinación nueva... ¡Este es tu sitio!</string>
    <string name="onboarding_generar_3">Y ahora, es momento de empezar a usar la aplicación. \n ¡Que la disfrutes!</string>

</resources>